--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "commander": "^10.0.0",
+    "download-git-repo": "^3.0.2",
     "inquirer": "^9.1.4"
   }
 }
